  --------------------------  HepMC-2.03.10  --------------------------

2009-06-03  Lynn Garren

	* src/CommonIO.cc: add the capability to process IO_GenEvent ascii
	output produced by HepMC 2.04 and 2.05. (Extra information is ignored.)

2008-10-08  Lynn Garren

	* test/testHepMCIteration.cc.in: add loop over children to the test
	
	* src/IO_Ascii.cc, IO_ExtendedAscii.cc, IO_GenEvent.cc:
	fix error messages

  --------------------------  HepMC-2.03.09  --------------------------

2008-06-24  Lynn Garren

	* fio/IO_HEPEVT.cc: bug fix for inconsistency in HWHGUP
	see https://savannah.cern.ch/bugs/?38173 for details

  --------------------------  HepMC-2.03.08  --------------------------

2008-04-23  Lynn Garren

	* src/GenVertex.cc: fix bug in edge_iterator operator++
        * src/IO_Ascii.cc: minor fix for VC9
        * src/IO_ExtendedAscii.cc: minor fix for VC9
        * src/IO_AsciiParticle.cc: minor fix for VC9

  --------------------------  HepMC-2.03.07  --------------------------

2008-04-18  Lynn Garren

	* HepMC/GenEvent.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_ExtendedAscii.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_GenEvent.h: minor bug fix for gcc 4.3.0
	* HepMC/ParticleData.h: minor bug fix for gcc 4.3.0
	* src/IO_ExtendedAscii.cc: minor bug fix for gcc 4.3.0
	* src/IO_GenEvent.cc: minor bug fix for gcc 4.3.0
	
  --------------------------  HepMC-2.03.06  --------------------------

2008-03-12  Lynn Garren
	
	* test: reduce size of input files
	
	* IO_HEPEVT: add trust_beam_particles and set_trust_beam_particles
	  methods so the user can specify that no beam particles are available.
	  This fixes a problem with pythia6 input when the user chooses "none".

2008-03-11  Lynn Garren

	* src/GenEvent.cc: The GenVertex pointer to the parent event was 
	  not properly moved when the operator= method was used to copy
	  a GenEvent.  That bug is now fixed.
	* GenVertex: added protected change_parent_event_ method for swap 
	  as part of bug fix.